#--------------------------------------------------------------------------
# ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V01-00-76
2020-01-21 Mikhail S. Dubrovin
- update examples/ex_jungfrau_images.py for pixel numeration demo

Tag: V01-00-75
2020-01-15 Mikhail S. Dubrovin
- update Detector/examples for Jungfrau4M

Tag: V01-00-74
2019-04-16 Mikhail S. Dubrovin
- integrate AreaDetectorCompound under Detector
- use (str) or (list) input parameter 'compound det1 det2', ['det1', 'det2']
modified:   examples/ex_AreaDetectorCompound.py
modified:   src/AreaDetector.py
modified:   src/AreaDetectorCompound.py
modified:   src/PyDetector.py
modified:   src/UtilsJungfrau.py

Tag: V01-00-73
2019-04-08 Mikhail S. Dubrovin
add method examples/ex_AreaDetectorCompound.py

Tag: V01-00-72
2019-04-05 Mikhail S. Dubrovin
add methods
  - indexes_xy_at_z in AreaDetector and PyDetectorAccess
  - AreaDetectorCompaund.add_method_double_nda, image_at_z

Tag: V01-00-71
2019-04-05 Mikhail S. Dubrovin
- add AreaDetectorCompaund.py
- minor tuning of examples

Tag: V01-00-68, 69, 70
2019-03-07 chrisvam
- fixed something in PyDetector.py

Tag: V01-00-67
2018-12-14 Mikhail S. Dubrovin
- UtilsEpix10kaCalib.pedestals_calibration - accseleration
  - accumulate ~1024 data in block once per entire frame (16,352,384)
    then process them for all frames
  - add option idx to calibrate single panel (10-20sec per panel)
  - add convenience methods for information about gain mode map and statistics
- UtilsEpix10kaCalib.deploy_constants - add parameter --proc='psrg'
	to control deployment types.
- UtilsEpix10ka - rename auto-switch gain modes for data bit14
modified: app/epix10ka_deploy_constants
	  app/epix10ka_offset_calibration
	  app/epix10ka_pedestals_calibration
	  doc/ChangeLog